@@ -1,3 +1,7 @@
+2008-03-11  David Wetzel <dave@turbocat.de>
+        GSWAdaptors/Apache2/mod_gsw.c
+        * fixed http status bug
+
 2008-03-10  David Wetzel <dave@turbocat.de>
         GSWAdaptors/Apache2/mod_gsw.c
         * use shared memory to share application statistics across httpd processes
